--- a/style.css
+++ b/style.css
@@ -4,21 +4,24 @@ body {
 input {
     border-radius: 7px;
     border-color: #0e9adb;
+    background-color: #d3f2ff;
 }
 
 button{
     border-radius: 7px;
     border-color: #0e9adb;
+    background-color: #d3f2ff;
 }
 
 .site-footer {
-    font-size: 14px;
-    /* background-color: #dffbff; */
+    max-width: 600px;
+    margin: 40px auto;
+    padding: 20px 30px;
+    background-color: #d3f2ff;
     color: #333;
-    height: 100;
-    width: 40%;
+    border-radius: 15px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     text-align: center;
-    box-sizing: border-box;
-    position: relative;
-    padding: auto;
-}
+    font-family: Arial, sans-serif;
+  }
+  
