--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ caption {
 }
 
 th {
-    background-color: blue;
+    background-color: rgb(47, 47, 238);
     color: white;
     padding: 10px;
     text-align: center;
